Fix vote handling and frontend result display

--- a/public/survey1.html
+++ b/public/survey1.html
@@ -65,8 +65,8 @@
         function displayResult(data) {
             document.getElementById('result').innerHTML = `
                 <h3>Survey Results</h3>
-                <p>True (Kamala Harris): ${data.truePercentage}% (${data.trueVotes} votes)</p>
-                <p>False (Donald Trump): ${data.falsePercentage}% (${data.falseVotes} votes)</p>
+                <p>Kamala Harris: ${data.truePercentage}% (${data.trueVotes} votes)</p>
+                <p>Donald Trump: ${data.falsePercentage}% (${data.falseVotes} votes)</p>
             `;
         }
     </script>
